<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>TelaLocalizarPadroes</class>
 <widget class="QMainWindow" name="TelaLocalizarPadroes">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>346</width>
    <height>493</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Localizar Padrões</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QVBoxLayout" name="verticalLayout_5">
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_4">
      <item>
       <widget class="QGroupBox" name="groupBox">
        <property name="title">
         <string>Procurar nos arquivos</string>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
            <widget class="QLabel" name="label">
             <property name="text">
              <string>Pasta &amp;inicial:</string>
             </property>
             <property name="buddy">
              <cstring>txtPastaInicial</cstring>
             </property>
            </widget>
           </item>
           <item>
            <widget class="QLineEdit" name="txtPastaInicial"/>
           </item>
           <item>
            <widget class="QPushButton" name="btnAlterarPasta">
             <property name="text">
              <string>Alterar pasta</string>
             </property>
            </widget>
           </item>
          </layout>
         </item>
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <item>
            <widget class="QLabel" name="label_2">
             <property name="text">
              <string>Padrão de &amp;busca:</string>
             </property>
             <property name="buddy">
              <cstring>txtTextoBusca</cstring>
             </property>
            </widget>
           </item>
           <item>
            <widget class="QLineEdit" name="txtTextoBusca"/>
           </item>
           <item>
            <widget class="QPushButton" name="btnProcurar">
             <property name="text">
              <string>Procurar</string>
             </property>
            </widget>
           </item>
          </layout>
         </item>
        </layout>
       </widget>
      </item>
      <item>
       <widget class="QGroupBox" name="groupBox_3">
        <property name="title">
         <string>Opções de busca</string>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_3">
           <item>
            <widget class="QCheckBox" name="chkExpressoesRegulares">
             <property name="text">
              <string>Expressões &amp;regulares</string>
             </property>
            </widget>
           </item>
           <item>
            <spacer name="horizontalSpacer">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
             <property name="sizeHint" stdset="0">
              <size>
               <width>40</width>
               <height>20</height>
              </size>
             </property>
            </spacer>
           </item>
           <item>
            <widget class="QPushButton" name="btnTestarExpressaoRegular">
             <property name="enabled">
              <bool>false</bool>
             </property>
             <property name="text">
              <string>&amp;Testar...</string>
             </property>
            </widget>
           </item>
          </layout>
         </item>
         <item>
          <widget class="QCheckBox" name="chkPalavraInteira">
           <property name="text">
            <string>&amp;Palavra inteira</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QCheckBox" name="chkUsarNomeArquivoComoPadrao">
           <property name="text">
            <string>Usar nome de &amp;arquivo como padrão de busca</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QCheckBox" name="chkConsiderarCaixaLetra">
           <property name="text">
            <string>Diferenciar &amp;maiúsculas e minúsculas</string>
           </property>
          </widget>
         </item>
        </layout>
       </widget>
      </item>
      <item>
       <widget class="QGroupBox" name="groupBox_2">
        <property name="title">
         <string>Arquivos localizados</string>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
          <widget class="QTableView" name="lvwLocalizados"/>
         </item>
        </layout>
       </widget>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections/>
</ui>
